@@ -1,5 +1,5 @@
 Package: rebmix
-Version: 2.4.2
+Version: 2.5.0
 Title: The Rebmix Package
 Author: Marko Nagode
 Maintainer: Marko Nagode <marko.nagode@fs.uni-lj.si>
