@@ -330,7 +330,7 @@ REBMIX <- function(Dataset = NULL,
 {
   digits <- getOption("digits"); options(digits = 15)
 
-  message("REBMIX Version 2.4.2");
+  message("REBMIX Version 2.5.0");
   flush.console()
 
   if (is.null(Dataset)) {
