@@ -56,7 +56,11 @@
 }
 \section{Changes in version 2.4.2}{ 
 \itemize{ 
-\item Fixed symbol eating bug on Mac OS X.  
+\item Fixed symbol eating bug for Mac OS X.  
+}
+\section{Changes in version 2.5.0}{ 
+\itemize{ 
+\item Fixed symbol eating bug for Mac OS X.  
 }
 }
 
